0024972: Problem of the influence of the includes order during compilation

All necessary files were included.
Unused files from package PColStd were removed.