src/BRepOffset/BRepOffset_Tool.cxx
@@ -75,6 +75,7 @@
 #include <Geom_ConicalSurface.hxx>
 #include <Geom_Curve.hxx>
 #include <Geom_Line.hxx>
+#include <Geom_Plane.hxx>
 #include <Geom_Conic.hxx>
 #include <Geom_TrimmedCurve.hxx>
 #include <GCPnts_QuasiUniformDeflection.hxx>
